# ToDo-app

./: .gitignore  Dockerfile  pyproject.toml  requests_api.py
app/: main.py
app/api/: auth_route.py  todo_route.py
app/core/: auth.py  security.py
app/db/: database.py
app/models/: models_module.py
app/repository/: crud_tasks.py  crud_users.py
app/schemes/: schemes_module.py
app/services/: todo_service.py  users_service.py
front-end/: index.html  script.js
